[package]
name = "timely-viz"
version = "0.1.0"
authors = ["Andrea Lattuada <andrea.lattuada@inf.ethz.ch>"]

[dependencies]
abomonation = "0.5"
abomonation_derive = "0.3"
timely_communication = "0.5"
timely = { git = "https://github.com/frankmcsherry/timely-dataflow" }
differential-dataflow = { path = "../" }
